; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/coda/extr_coda-bit.c_coda_wait_timeout.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/coda/extr_coda-bit.c_coda_wait_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.coda_dev = type { i32 }

@jiffies = common dso_local global i64 0, align 8
@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.coda_dev*)* @coda_wait_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @coda_wait_timeout(%struct.coda_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.coda_dev*, align 8
  %4 = alloca i64, align 8
  store %struct.coda_dev* %0, %struct.coda_dev** %3, align 8
  %5 = load i64, i64* @jiffies, align 8
  %6 = call i64 @msecs_to_jiffies(i32 1000)
  %7 = add i64 %5, %6
  store i64 %7, i64* %4, align 8
  br label %8

8:                                                ; preds = %20, %1
  %9 = load %struct.coda_dev*, %struct.coda_dev** %3, align 8
  %10 = call i64 @coda_isbusy(%struct.coda_dev* %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %21

12:                                               ; preds = %8
  %13 = load i64, i64* @jiffies, align 8
  %14 = load i64, i64* %4, align 8
  %15 = call i64 @time_after(i64 %13, i64 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %12
  %18 = load i32, i32* @ETIMEDOUT, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %2, align 4
  br label %22

20:                                               ; preds = %12
  br label %8

21:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %22

22:                                               ; preds = %21, %17
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @msecs_to_jiffies(i32) #1

declare dso_local i64 @coda_isbusy(%struct.coda_dev*) #1

declare dso_local i64 @time_after(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
